name:          free-examples
category:      Control, Monads
version:       0.1
license:       BSD3
cabal-version: 1.18
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/free/
bug-reports:   http://github.com/ekmett/free/issues
copyright:     Copyright (C) 2008-2015 Edward A. Kmett
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.2
synopsis:      Monads for free
description:   Examples projects using @free@
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/free.git

flag mandelbrot-iter
  default: True

library
  hs-source-dirs: .
  default-language: Haskell2010
  exposed-modules: Cabbage
  ghc-options: -Wall
  build-depends:
    base         == 4.*,
    base-compat  >= 0.6,
    free,
    mtl          >= 2.0.1 && < 2.3,
    transformers >= 0.2   && < 0.6

executable free-mandelbrot-iter
  if !flag(mandelbrot-iter)
    buildable: False
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: MandelbrotIter.lhs
  ghc-options: -Wall
  build-depends:
    -- This unusually restrictive lower version bound on base is a workaround
    -- for the fact that X11-1.10 does not build correctly on older versions of
    -- base (see https://github.com/ekmett/free/runs/3235998897#step:18:237)
    base >= 4.9 && < 5,
    free,
    HGL          >= 3.2.3.2,
    mtl          >= 2.0.1 && < 2.3,
    transformers >= 0.2   && < 0.6

executable free-newton-coiter
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: NewtonCoiter.lhs
  ghc-options: -Wall
  build-depends:
    base        == 4.*,
    base-compat >= 0.6,
    comonad     >= 4 && < 6,
    free

executable free-perf-th
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: PerfTH.hs
  ghc-options: -Wall
  build-depends:
    base         == 4.*,
    fail         == 4.9.*,
    free,
    mtl          >= 2.0.1 && < 2.3,
    rdtsc,
    transformers >= 0.2   && < 0.6

executable free-retry-th
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: RetryTH.hs
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
    base                == 4.*,
    base-compat         >= 0.6,
    fail                == 4.9.*,
    free,
    transformers        >= 0.2   && < 0.6,
    transformers-compat >= 0.6.4 && < 0.8

executable free-teletype
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: Teletype.lhs
  ghc-options: -Wall
  build-depends:
    base        == 4.*,
    base-compat >= 0.6,
    free,
    monad-loops

executable free-validation-form
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: ValidationForm.hs
  ghc-options: -Wall
  build-depends:
    base        == 4.*,
    base-compat >= 0.6,
    free,
    mtl         >= 2.0.1 && < 2.3
